--- a/styles/sections.css
+++ b/styles/sections.css
@@ -16,7 +16,7 @@
       top: 50%;
       background: linear-gradient(
         180deg,
-        trasparent 0%,
+        transparent 0%,
         #020617 100%
       );
     }
